# Portfolio_Generator

./: .gitignore  LICENSE  LICENSE.md  README.md  pyproject.toml  requirements.txt
scripts/: generate_portfolio.py  watch.py
templates/: index_template.html  portfolio.json  resume_pdf_template.html  resume_template.html
templates/css/: main.css  resume.css
