[project]
name = "Portfolio_Generator"
version = "0.1.0"
description = "A Python package to generate a portfolio website, resume, and PDF from a JSON configuration file."
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "AbdElMoniem ElHifnawy", email = "abdalmoniemalhifnawy@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "dacite>=1.9.2",
    "jinja2>=3.1.6",
    "livereload>=2.7.1",
    "pdfkit>=1.0.0",
    "pyjson5>=1.6.9",
    "watchdog>=6.0.0",
]
